--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         /* Basic Options */
         "target":
-            "ES5" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */,
+            "ES2016" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */,
         "module":
             "ESNext" /* Specify module code generation: 'none', commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
         // "lib": [],                             /* Specify library files to be included in the compilation:  */
@@ -14,7 +14,7 @@
         "declaration": false,                   /* Generates corresponding '.d.ts' file. */
         // "sourceMap": true,                     /* Generates corresponding '.map' file. */
         // "outFile": "./",                       /* Concatenate and emit output to single file. */
-        "outDir": "./dist",                        /* Redirect output structure to the directory. */
+        "outDir": "./build",                        /* Redirect output structure to the directory. */
         // "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
         // "removeComments": true,                /* Do not emit comments to output. */
         // "noEmit": true,                        /* Do not emit outputs. */
@@ -23,7 +23,7 @@
         // "isolatedModules": true,               /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
 
         /* Strict Type-Checking Options */
-        "strict": true /* Enable all strict type-checking options. */,
+        // "strict": true /* Enable all strict type-checking options. */,
         // "noImplicitAny": true,                 /* Raise error on expressions and declarations with an implied 'any' type. */
         // "strictNullChecks": true,              /* Enable strict null checks. */
         // "noImplicitThis": true,                /* Raise error on 'this' expressions with an implied 'any' type. */
@@ -57,5 +57,5 @@
         // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
         "esModuleInterop": true
     },
-    "include": ["src/**/*.tsx", "src/**/*.ts", "src/index.ts"]
+    "include": ["src/**/*.tsx", "src/**/*.ts", "src/index.js"]
 }
