--- a/template/package.json
+++ b/template/package.json
@@ -3,13 +3,12 @@
     "name": "{{ name }}",
     "version": "0.0.0",
     "license": "MIT",
-    "source": "src/entry.module.ts",
     "scripts": {
         "start": "per-env",
         "start:production": "npm run -s serve",
         "start:development": "npm run -s dev",
-        "build": "microbundle build",
-        "dev": "preact watch",
+        "build": "preact build",
+        "watch": "preact watch",
         "lint": "tslint -p tsconfig.json",
         "lint:fix": "tslint -p tsconfig.json --fix",
         "test": "jest",
@@ -19,22 +18,21 @@
         "dist/*"
     ],
     "devDependencies": {
-        "@types/jest": "^23.3.13",
-        "jest": "^24.0.0",
-        "microbundle": "^0.9.0",
+        "@types/jest": "^24.0.1",
+        "jest": "^24.1.0",
         "per-env": "^1.0.2",
-        "preact-cli": "^3.0.0-next.14",
+        "preact-cli": "^3.0.0-next.16",
         "preact-cli-postcss": "^1.1.1",
         "preact-render-spy": "^1.3.0",
         "preact-render-to-string": "^4.1.0",
-        "prettier": "^1.16.1",
+        "prettier": "^1.16.4",
         "purgecss-webpack-plugin": "^1.4.0",
         "ts-jest": "^23.10.5",
         "tslint": "^5.12.1",
-        "tslint-config-prettier": "^1.17.0",
+        "tslint-config-prettier": "^1.18.0",
         "tslint-plugin-prettier": "^2.0.1",
         "ts-loader": "^5.3.3",
-        "typescript": "^3.2.4"
+        "typescript": "^3.3.3"
     },
     "dependencies": {
         "preact": "^8.4.2",
