--- a/template/package.json
+++ b/template/package.json
@@ -15,7 +15,7 @@
         "test:compile": "tsc --noEmit"
     },
     "eslintIgnore": [
-        "dist/*"
+        "build/*"
     ],
     "devDependencies": {
         "@types/jest": "^24.0.1",
